2007-01-25  Ted Bullock  <tbullock@canada.com>

	* wsesslog.c changed a sprintf call to the more secure snprintf

	*getopt.c changed a sprintf call to the more secure snprintf

2007-01-20  Ted Bullock  <tbullock@canada.com>

	* Included the shell script autogen.sh to compile the necessary 
	autotool components.
	
	* Removed redundant configuration files from CVS, regenerate these
	with the autogen.sh script (recommend autoconf 2.60 and above)

	* Removed the ttest.c file from CVS

2007-01-16  Ted Bullock <tbullock@canada.com>
	* Build System: Updated build system to a more typical directory
	layout and wrote missing makefile.am files for automake

	* idleconn: Now installed along with the httperf executable

	* ttest: Remove program from build

2007-01-02  Ted Bullock <tbullock@canada.com>

	*License: Included openssl linking exception

2006-12-08  Ted Bullock <tbullock@canada.com>
	
	* Bug Fixes: Added a number of fixes from the mailing lists
	over the last 6 years.

	* compiler warnings: Compiler warnings in core.c and wsesslog.c
	
	* configuration: Fixes a problem with the "configure" setup
	where the "--prefix=" option wasn't being obeyed

	* zero length: Fixes bug in http.c (parse_header)with zero
	length content

	* Host Header: Identify machine by FQD rather than hostname

	* Persistent Connections: Added Persistent connections to HTTP 1.0
	requests

	* Robust alloca.h: Robust way to handle the header file that
	defines the alloca function <alloca.h> for linux and stdlib.h for
	BSD and others

	* Time Discrepancy: Fixed a discrepancy between the data produced
	by httperf and the documentation in regards to timing.

	* wsesslog Crash: Fixed a problem with the wsesslog crashing
	httperf due to an unhandled session failure from a burdened server

2000-10-31  David Mosberger  <davidm@hpl.hp.com>

	* Version 0.8 released.

	* core.c (do_recv) [!HAVE_SSL]: Avoid referncing param.use_ssl.
	(do_send): Ditto.
