@@ -3,5 +3,5 @@ AM_CFLAGS = -Wall -O2 -I$(srcdir)/../ -I$(srcdir)/../../
 AM_LDFLAGS =
 
 noinst_LIBRARIES = libutil.a
-libutil_a_SOURCES = getopt.c getopt1.c ssl_writev.c
+libutil_a_SOURCES = ssl_writev.c
 
